get event stats storage starter
